# scottdmilner.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  classData.js  exploreLessons.js  index.css  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.githooks/: pre-commit
.github/workflows/: publish.yml
code-projects/accomplice-pipeline/: index.html  index.qmd
code-projects/dungeon-pipeline/: index.html  index.qmd
code-projects/pipebot/: index.html  index.qmd
code-projects/tractor-https/: index.html  index.qmd
code-projects/tractor-lops/: index.html  index.qmd
posts/pipebot/: index.html  index.qmd
projects/accomplice/: index.html  index.qmd
projects/dungeons/: index.html  index.qmd
projects/pipebot/: index.html  index.qmd
projects/tractor-https/: index.html  index.qmd
