[tool.poetry]
name = "scottdmilner-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scottdmilner"}]

[tool.poetry.dependencies]
python = "^3.11"
quarto-cli = "^1.6.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
