[tool.poetry]
name = "scottdmilner-github-io"
version = "0.1.0"
description = ""
authors = ["Scott Milner <scottdmilner@gmail.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = ">=3.9"
quarto-cli = "^1.6.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
